--- a/style/About us.css
+++ b/style/About us.css
@@ -74,6 +74,7 @@ html {
 .logo img {
     height: 12vh;
     margin-left: 2vw;
+    padding: 2%;
 }
 
 .contact-button button {
@@ -796,7 +797,7 @@ form input {
     }
 
     .logo img {
-        height: 5vh;
+        height: 7vh;
         margin-left: 2vw;
     }
 
@@ -878,7 +879,7 @@ form input {
     }
 
     .logo img {
-        height: 5vh;
+        height: 7vh;
         margin-left: 4vw;
     }
 
