--- a/style/index.css
+++ b/style/index.css
@@ -74,6 +74,7 @@ html {
 .logo img {
     height: 12vh;
     margin-left: 2vw;
+    padding: 2%;
 }
 
 .contact-button button {
@@ -1387,7 +1388,7 @@ form input {
     }
 
     .logo img {
-        height: 5vh;
+        height: 7vh;
         margin-left: 2vw;
     }
 
@@ -1552,7 +1553,7 @@ form input {
     }
 
     .logo img {
-        height: 5vh;
+        height: 7vh;
         margin-left: 4vw;
     }
 
