--- a/style/property.css
+++ b/style/property.css
@@ -75,6 +75,7 @@ html {
 .logo img {
     height: 9vh;
     margin-left: 2vw;
+    padding: 2%;
 }
 
 .contact-button button {
@@ -796,7 +797,7 @@ p {
     }
 
     .logo img {
-        height: 5vh;
+        height: 7vh;
         margin-left: 2vw;
     }
 
@@ -869,7 +870,7 @@ p {
     }
 
     .logo img {
-        height: 5vh;
+        height: 7vh;
         margin-left: 4vw;
     }
 
