--- a/style/About us.css
+++ b/style/About us.css
@@ -398,7 +398,7 @@ form input {
     #menu-btn button {
         border: none;
         background-color: white;
-        color: black;
+        color: #454547;
         font-size: x-large;
         margin-right: 0vw;
     }
