--- a/style/Buy Property.css
+++ b/style/Buy Property.css
@@ -584,7 +584,7 @@ textarea:focus , .requirment-form input:focus{
     #menu-btn button {
         border: none;
         background-color: white;
-        color: black;
+        color: #454547;
         font-size: x-large;
         margin-right: 0vw;
     }
