--- a/style/Rental property.css
+++ b/style/Rental property.css
@@ -535,7 +535,7 @@ textarea:focus , .requirment-form input:focus{
     #menu-btn button {
         border: none;
         background-color: white;
-        color: black;
+        color: #454547;
         font-size: x-large;
         margin-right: 0vw;
     }
