--- a/style/Rental.css
+++ b/style/Rental.css
@@ -400,7 +400,7 @@ p {
     #menu-btn button {
         border: none;
         background-color: white;
-        color: black;
+        color: #454547;
         font-size: x-large;
         margin-right: 0vw;
     }
