--- a/style/Upload property.css
+++ b/style/Upload property.css
@@ -448,7 +448,7 @@ textarea {
     #menu-btn button {
         border: none;
         background-color: white;
-        color: black;
+        color: #454547;
         font-size: x-large;
         margin-right: 0vw;
     }
